<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_take_away"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ayupriyambodo.splashscreen.TakeAway">

    <TextView
        android:text="@string/identitas_pemesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:id="@+id/textView4" />

    <TextView
        android:hint="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:id="@+id/textView5" />

    <TextView
        android:hint="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="40dp"
        android:id="@+id/textView6" />

    <TextView
        android:hint="@string/alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="39dp"
        android:id="@+id/textView7" />

    <TextView
        android:hint="@string/catatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="42dp"
        android:id="@+id/textView8" />

    <Button
        android:text="@string/Pilih_Pesanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Pilih pesanan"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:id="@+id/button2" />
</RelativeLayout>
