<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ayupriyambodo.splashscreen.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/images"
        android:layout_marginTop="17dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/pilih_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rgPilihan"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp">

        <RadioButton
            android:text="@string/dine_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="DineIn"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="11dp"
            android:id="@+id/radioDinein"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/take_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="TakeAway"
            android:layout_below="@+id/radioButton"
            android:layout_alignStart="@+id/radioButton"
            android:layout_marginTop="10dp"
            android:id="@+id/radioTakeaway"
            android:layout_weight="1" />

    </RadioGroup>

    <Button
        android:text="@string/pilih_pesanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPesanan"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:layout_weight="1" />

</RelativeLayout>
